--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <permission android:name="com.geal.lightningauth.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="com.geal.lightningauth.permission.C2D_MESSAGE" />
+	<!-- App receives GCM messages. -->
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<!-- GCM requires a Google account. -->
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<!-- Keeps the processor from sleeping when a message is received. -->
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -25,5 +33,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+       	<receiver android:name="com.google.android.gcm.GCMBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND" >
+		  <intent-filter>
+		    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+		    <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+		    <category android:name="com.geal.lightningauth" />
+		  </intent-filter>
+		</receiver>
+		<service android:name=".GCMIntentService" />
     </application>
 </manifest>
